// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInfoCard should not render progress chart 1`] = `
<section
  className="pwapp-form-card"
>
  <section
    className="pwapp-form-card__part"
  >
    <div
      className="pwapp-form-card__part__side"
    >
      <div
        className="pwapp-form-card__part__inner pwapp-form-card__face"
      >
        <div
          className="pwapp-form-card__face__colored-side"
        />
        <div
          onClick={[Function]}
        >
          <div
            className="pwapp-form-card__face__heading"
          >
            <p
              className="pwapp-form-card__face__title"
            >
              Form
            </p>
            30/06/2020
            <F>
              open
            </F>
          </div>
          <div
            className="pwapp-form-card__face__stats"
          >
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Submit
                  className="pwapp-form-card__face__icon"
                />
                Commits
              </div>
              <p>
                10
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Target
                  className="pwapp-form-card__face__icon"
                />
                Target
              </div>
              <p>
                --
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Dashboard
                  className="pwapp-form-card__face__icon"
                />
                MAX
              </div>
              <p>
                --
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Timer
                  className="pwapp-form-card__face__icon"
                />
                Close date
              </div>
              <p>
                --
              </p>
            </div>
          </div>
        </div>
        <div
          className="pwapp-form-card__buttons"
        >
          <Component
            content="Open form viewer"
            placement="top"
          >
            <p
              onClick={[Function]}
            >
              <Link />
            </p>
          </Component>
          <Component
            content={
              <Unknown
                url="/foo"
              />
            }
            placement="top"
          >
            <p>
              <QRCode />
            </p>
          </Component>
          <Component
            content="Commits"
            placement="top"
          >
            <p
              onClick={[Function]}
            >
              <Commit />
            </p>
          </Component>
          <Component
            content="Close from"
            placement="top"
          >
            <p>
              <Archive />
            </p>
          </Component>
        </div>
      </div>
    </div>
  </section>
</section>
`;

exports[`FormInfoCard should not render public badge 1`] = `
<section
  className="pwapp-form-card"
>
  <section
    className="pwapp-form-card__part"
  >
    <div
      className="pwapp-form-card__part__side"
    >
      <div
        className="pwapp-form-card__part__inner pwapp-form-card__face"
      >
        <div
          className="pwapp-form-card__face__colored-side"
        />
        <div
          onClick={[Function]}
        >
          <div
            className="pwapp-form-card__face__heading"
          >
            <p
              className="pwapp-form-card__face__title"
            >
              Form
            </p>
            30/06/2020
            <F>
              open
            </F>
          </div>
          <div
            className="pwapp-form-card__face__stats"
          >
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Submit
                  className="pwapp-form-card__face__icon"
                />
                Commits
              </div>
              <p>
                10
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Target
                  className="pwapp-form-card__face__icon"
                />
                Target
              </div>
              <p>
                --
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Dashboard
                  className="pwapp-form-card__face__icon"
                />
                MAX
              </div>
              <p>
                --
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Timer
                  className="pwapp-form-card__face__icon"
                />
                Close date
              </div>
              <p>
                --
              </p>
            </div>
          </div>
        </div>
        <div
          className="pwapp-form-card__buttons"
        >
          <Component
            content="Open form viewer"
            placement="top"
          >
            <p
              onClick={[Function]}
            >
              <Link />
            </p>
          </Component>
          <Component
            content={
              <Unknown
                url="/foo"
              />
            }
            placement="top"
          >
            <p>
              <QRCode />
            </p>
          </Component>
          <Component
            content="Commits"
            placement="top"
          >
            <p
              onClick={[Function]}
            >
              <Commit />
            </p>
          </Component>
          <Component
            content="Close from"
            placement="top"
          >
            <p>
              <Archive />
            </p>
          </Component>
        </div>
      </div>
    </div>
  </section>
  <ProgressChart
    maxGap={100}
    receivedCommits={10}
    targetGap={10}
  />
</section>
`;

exports[`FormInfoCard should render public badge 1`] = `
<section
  className="pwapp-form-card"
>
  <section
    className="pwapp-form-card__part"
  >
    <div
      className="pwapp-form-card__part__side"
    >
      <div
        className="pwapp-form-card__part__inner pwapp-form-card__face"
      >
        <div
          className="pwapp-form-card__face__colored-side"
        />
        <div
          onClick={[Function]}
        >
          <div
            className="pwapp-form-card__face__heading"
          >
            <p
              className="pwapp-form-card__face__title"
            >
              Form
            </p>
            30/06/2020
            <F>
              open
            </F>
            <F
              color="primary"
            >
              PUBLIC
            </F>
          </div>
          <div
            className="pwapp-form-card__face__stats"
          >
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Submit
                  className="pwapp-form-card__face__icon"
                />
                Commits
              </div>
              <p>
                10
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Target
                  className="pwapp-form-card__face__icon"
                />
                Target
              </div>
              <p>
                --
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Dashboard
                  className="pwapp-form-card__face__icon"
                />
                MAX
              </div>
              <p>
                --
              </p>
            </div>
            <div
              className="pwapp-form-card__face__data"
            >
              <div
                className="pwapp-form-card__face__data-heading"
              >
                <Timer
                  className="pwapp-form-card__face__icon"
                />
                Close date
              </div>
              <p>
                --
              </p>
            </div>
          </div>
        </div>
        <div
          className="pwapp-form-card__buttons"
        >
          <Component
            content="Open form viewer"
            placement="top"
          >
            <p
              onClick={[Function]}
            >
              <Link />
            </p>
          </Component>
          <Component
            content={
              <Unknown
                url="/foo"
              />
            }
            placement="top"
          >
            <p>
              <QRCode />
            </p>
          </Component>
          <Component
            content="Commits"
            placement="top"
          >
            <p
              onClick={[Function]}
            >
              <Commit />
            </p>
          </Component>
          <Component
            content="Close from"
            placement="top"
          >
            <p>
              <Archive />
            </p>
          </Component>
        </div>
      </div>
    </div>
  </section>
  <ProgressChart
    maxGap={100}
    receivedCommits={10}
    targetGap={10}
  />
</section>
`;
